--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -22,6 +22,7 @@ settings:
 #  max_alert_distance_ns:
   softDelete: true
   multipleWorldSupport: false
+  snitchMessage: "&b * %s %s at %s [%s %s %s %s] %sm %s"
 entryculling:
   enabled: true
   maxcount: 200
